--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <meta name="description" content="Get the feeling of authentic handmade ramen at home with ease!">
     <meta name="author" content="Hannah Avery">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="MobileOptimized" content="width">
-    <meta name="HandheldFriendly" content="true">
+    <meta name="mobileoptimized" content="width">
+    <meta name="handheldfriendly" content="true">
   </head>
   <body>
     <header class="full-width">
